New structure of pages.json and corresponding classes in parser

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "Collapsed": "false"
    },
@@ -23,48 +23,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
-      "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
-      "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
-      "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
-      "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
-      "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n"
+      "{'start': ['title', 'event_url', 'date'], 'event': ['description', 'organizers', 'location', 'time', 'themes', 'price', 'speakers', 'reg_url', 'online_status', 'speakers_companies'], 'analysis': ['honor_description', 'language', 'prize', 'tags', 'event_type']}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'url' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-5008ce0a507f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpages_checked\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m     \u001b[0mpage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStartPage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m     \u001b[0mactual\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactual_events\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mevent_url\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mactual\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-12-5008ce0a507f>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, start_url)\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfields\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mfield\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfields\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'start'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_content\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfield\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mevent_url\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'event_url'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mevent_url\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Yandex.Disk/GitHub/events/files.py\u001b[0m in \u001b[0;36mget_content\u001b[0;34m(page_data, field)\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0mselectors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_page_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'selectors'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mdefault\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_page_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'default'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m     \u001b[0msoup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoups\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m     \u001b[0moverlaps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0mcontent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'url' is not defined"
      ]
     }
    ],
@@ -92,30 +64,21 @@
     "\n",
     "class StartPage:\n",
     "    \"\"\"Парсинг начальных страниц, описанных в pages.json\"\"\"\n",
-    "    def __init__(self, name):\n",
-    "        self.data = {}\n",
-    "        self.name = name\n",
-    "        self.url = files.pages[name]['start_url']\n",
-    "        _ = files.fields_order(name).values()\n",
-    "        self.start_fields, self.event_fields, self.analysis_fields = _\n",
-    "        for field in self.start_fields:\n",
-    "            self.data[field] = files.get_content(self.name, self.url, field)\n",
-    "        self.make_event_cards()\n",
+    "    def __init__(self, start_url):\n",
+    "        self.data, self.events = {}, {}\n",
+    "        self.data['start_url'] = start_url\n",
+    "        self.fields = files.fields_order(start_url)\n",
+    "        for field in self.fields['start']:\n",
+    "            self.data[field] = files.get_content(self.data, field)\n",
+    "        for i, event_url in enumerate(self.data['event_url']):\n",
+    "            self.events[event_url] = {}\n",
+    "            for field in set(self.fields['start']) - {'event_url'}:\n",
+    "                self.events[event_url][field] = self.data[field][i]\n",
     "    \n",
     "\n",
     "    def __repr__(self):\n",
     "        return self.actual_events\n",
-    "    \n",
-    "\n",
-    "    def make_event_cards(self):\n",
-    "        \"\"\"Создаёт словари событий, независимо от текущей даты\"\"\"\n",
-    "        self.events = {}\n",
-    "        for i, event_url in enumerate(self.data['event_url']):\n",
-    "            self.events[event_url] = {}\n",
-    "            self.events[event_url]['start'] = self.name\n",
-    "            for field in set(self.start_fields) - {'event_url'}:\n",
-    "                self.data[field][i]\n",
-    "                self.events[event_url][field] = self.data[field][i]\n",
+    "            \n",
     "                \n",
     "    @property\n",
     "    def actual_events(self):\n",
@@ -127,15 +90,15 @@
     "        return events\n",
     "\n",
     "\n",
-    "class Event:\n",
+    "class EventPage:\n",
     "    \"\"\"Парсинг страниц событий\"\"\"\n",
-    "    def __init__(self, event_url, page):\n",
-    "        self.name = page.name\n",
-    "        self.url = event_url\n",
-    "        self.data = page.events[self.url]\n",
+    "    def __init__(self, event_url, StartPage):\n",
+    "        self.data = StartPage.events[event_url]\n",
+    "        self.data['start_url'] = StartPage.events['start_url']\n",
+    "        self.data['event_url'] = event_url\n",
     "        self.event_fields = page.event_fields\n",
-    "        for field in self.event_fields:\n",
-    "            self.data[field] = files.get_content(self.name, event_url, field)\n",
+    "        for field in StartPage.fields['event']:\n",
+    "            self.data[field] = files.get_content(self.data, field)\n",
     "\n",
     "\n",
     "for name in pages_checked:\n",
@@ -188,6 +151,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "d = {'a':1, 'b':2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d.get('c'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
@@ -236,8 +229,6 @@
     "    add_tag('a', p, text='ссылка на мероприятие', attrs={'href': event_url})\n",
     "    \n",
     "    if data.reg_url:\n",
-    "        if data.reg_url[0] == '#':  #! в случае если ссылка на регистрацию - якорная (нужен обработчик)\n",
-    "            data.reg_url = event_url + data.reg_url\n",
     "        p.append(NavigableString(\", \"))\n",
     "        add_tag('a', p, text='ссылка для регистрации', attrs={'href': data.reg_url})\n",
     "\n",
