--- a/parser.ipynb
+++ b/parser.ipynb
@@ -9,7 +9,12 @@
    },
    "source": [
     "# 🐅 Парсер\n",
-    "Сначала проверяются главные («стартовые») страницы, описанные в файле `pages.json`. Далее найденные на них ссылки на внутренние страницы мероприятий. Результаты записываются в файл `events.json`, который далее используется для генерации карточек мероприятий в HTML. Результаты публикуются на [matyushkin.github.io/events](https://matyushkin.github.io/events/)."
+    "\n",
+    "Парсинг начинается со страниц, перечисленных в `pages.json`. Файл содержит необходимые сведения о структуре страниц сайта: стартовая страница, селекторы страницы, отвечающие за их описания (могут быть на стартовой `start_url` или внутренних страницах `event_urk`), количество соответствующих элементов.\n",
+    "\n",
+    "Если для ссылки события пока нет описания в файле `events.json`, в результате парсинга создаётся соответствующий объект. \n",
+    "\n",
+    "Сначала сохраняется информация, доступную со стартовой страницы (`\"start\"` в `pages.json`, в программе класс `StartPage`). Если мероприятия проходит сегодня или позже — собираем остальную информацию уже со страницы мероприятия  (`\"event\"` в `pages.json`, в программе класс `EventPage`). Результаты записываются в файл `events.json`, который далее используется для генерации карточек мероприятий в HTML, публикуемый на [matyushkin.github.io/events](https://matyushkin.github.io/events/)."
    ]
   },
   {
