New structure of HTML constructor with event card templating

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "Collapsed": "false"
    },
@@ -30,7 +30,7 @@
     "import langs\n",
     "import handlers\n",
     "\n",
-    "FORCE = False  # Если True - все страницы загружаются заново, если False -- только стартовые \n",
+    "FORCE = True  # Если True - все страницы загружаются заново, если False -- только стартовые \n",
     "\n",
     "# Узнаем, какие из стартовых страниц, перечисленных в files.pages, размечены.\n",
     "# Такие страницы содержат все поля, перечисленные в files.fields.\n",
@@ -82,6 +82,10 @@
     "        self.data['event_url'] = event_url\n",
     "        for field in start_page.fields['event']:\n",
     "            self.data[field] = files.get_content(self.data, field, force)\n",
+    "        for field in self.data:\n",
+    "            # удаление дупликатов в списках с сохранением порядка\n",
+    "            if type(self.data[field]) == list:\n",
+    "                self.data[field] = list(dict.fromkeys(self.data[field]))\n",
     "\n",
     "\n",
     "for start_url in pages_checked:\n",
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "Collapsed": "false"
    },
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "Collapsed": "false"
    },
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "Collapsed": "false"
    },
@@ -171,17 +175,19 @@
     "Collapsed": "false"
    },
    "source": [
-    "Предварительно, если среди мероприятий имеются мероприятия, не обрабатываемые парсером (`events_special`) или рекламируемые (`events_promo`), обрабатываем их отдельно. Для этого помечаем их в датафрейме особым образом."
+    "Для сборки страницы используем pandas и BeautifulSoup. Страницу собираем, объединяя soup-объекты в один. Предварительно, если среди мероприятий имеются мероприятия, не обрабатываемые парсером (`events_special`) или рекламируемые (`events_promo`), обрабатываем их отдельно. Для этого помечаем их в датафрейме особым образом."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "def promo_and_special():\n",
     "    event_types = 'promo', 'special'\n",
     "    d = {}\n",
@@ -189,76 +195,99 @@
     "        event_urls = list(eval(f'files.events_{event_type}.keys()'))\n",
     "        for event_url in event_urls:\n",
     "            d[event_url] = event_type\n",
-    "    return d"
+    "    return d\n",
+    "\n",
+    "df = pd.DataFrame.from_dict(files.events, orient='index')\n",
+    "df = df.sort_values(by=['date'])\n",
+    "df = df[df['date'] >= handlers.current_date.isoformat()]   #! добавить проверку на время\n",
+    "df['type'] = df.index.map(promo_and_special())\n",
+    "\n",
+    "# Убираем те мероприятия, которых не хотим видеть\n",
+    "df = df.drop(list(files.events_bad.keys()), errors='ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup, NavigableString\n",
-    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup, Comment\n",
+    "from itertools import zip_longest\n",
+    "import copy\n",
     "\n",
-    "soup = BeautifulSoup('<article></article')\n",
+    "with open(\"files/event_card_template.html\") as template:\n",
+    "    template = BeautifulSoup(template.read(), 'html.parser')\n",
+    "\n",
+    "\n",
+    "def add_info(template, data):\n",
+    "    s = copy.copy(template)\n",
     "    \n",
-    "df = pd.DataFrame.from_dict(files.events, orient='index')\n",
-    "df = df.sort_values(by=['date'])\n",
-    "df = df[df['date'] >= handlers.current_date.isoformat()]   #! добавить проверку на время\n",
-    "\n",
-    "df['type'] = df.index.map(promo_and_special())\n",
-    "\n",
-    "# Убираем те мероприятия, которых не хотим видеть\n",
-    "df = df.drop(list(files.events_bad.keys()), errors='ignore')\n",
-    "\n",
-    "def add_tag(child, parent, text='', attrs={}):\n",
-    "    tag = soup.new_tag(child, attrs=attrs)\n",
-    "    tag.string = text\n",
-    "    parent.append(tag)\n",
-    "    return eval(f'parent.{child}')\n",
-    "\n",
-    "\n",
-    "for event_url in df.index:\n",
-    "    data = df.loc[event_url]\n",
-    "    attrs = {'data-date': data.date, 'data-time': data.time, 'data-organizers': data['organizers']}\n",
-    "    section = soup.new_tag('section', attrs)\n",
-    "    hr = soup.new_tag('hr')\n",
-    "    section.append(hr)\n",
-    "\n",
-    "    h2 = add_tag('h2', section, data.title)\n",
-    "    p = add_tag('p', section)\n",
-    "    datetime_str = langs.make_datetime_string(data.date, data.time)\n",
-    "    t = add_tag('time', p, datetime_str)\n",
-    "    p.append(NavigableString(\", \"))\n",
-    "    add_tag('a', p, text='ссылка на мероприятие', attrs={'href': event_url})\n",
+    "    # Информационный блок\n",
+    "    data_block = s.find(\"div\", {\"class\":\"event\"})\n",
+    "    companies = [*data.organizers, *data.speakers_companies]\n",
+    "    companies = \" \".join(list(set(companies))).strip()\n",
+    "    data_block['data-companies'] = companies\n",
+    "    data_block['data-price'] = data.price\n",
+    "    data_block['data-online_status'] = data.online_status\n",
+    "    if data.type == 'promo':\n",
+    "        data_block['class'].append('promo')\n",
     "    \n",
+    "    \n",
+    "    # Обработка заголовка\n",
+    "    header = s.find(\"h2\")\n",
+    "    header.string = data.title\n",
+    "    \n",
+    "    # Блок с описанием места и времени\n",
+    "    time_and_space = s.find(\"p\", {\"class\":\"time_and_space\"})\n",
+    "    s.time.string = langs.make_datetime_string(data.date, data.time)\n",
+    "    s.time.wrap(s.new_tag('a', attrs={'href':data.event_url}))\n",
     "    if data.reg_url:\n",
-    "        p.append(NavigableString(\", \"))\n",
-    "        add_tag('a', p, text='ссылка для регистрации', attrs={'href': data.reg_url})\n",
-    "\n",
+    "        time_and_space.append(', ')\n",
+    "        reg_url = s.new_tag('a', attrs={'href':data.reg_url})\n",
+    "        reg_url.string = 'регистрация'\n",
+    "        time_and_space.append(reg_url) \n",
+    "    time_and_space.append('.')\n",
+    "    \n",
+    "    # Блок с темами и докладчиками\n",
+    "    themes_and_speakers = s.find(\"p\", {\"class\":\"themes_and_speakers\"})\n",
+    "    \n",
     "    if data.themes != ['']:\n",
-    "        themes_ul = add_tag('ul', section, attrs={'class': 'theme-block'})\n",
+    "        for theme in data.themes:\n",
+    "            if theme:\n",
+    "                line = s.new_tag('li')\n",
+    "                line.string = theme\n",
+    "                s.ul.append(line)\n",
+    "        if data.speakers!=['']:\n",
+    "            speakers_str = ', '.join(data.speakers)\n",
+    "            themes_and_speakers.append(f'Докладывают: {speakers_str}.')\n",
+    "    else:\n",
+    "        s.find(\"p\", {\"class\":\"themes_and_speakers\"}).extract()\n",
+    "    \n",
+    "    # Блок с описанием мероприятия\n",
+    "    description = s.find(\"p\", {\"class\":\"description\"})\n",
+    "    description.string = data.description[0]\n",
+    "    \n",
+    "    # Удаляем комментарии\n",
+    "    for element in s(text = lambda text: isinstance(text, Comment)):\n",
+    "        element.extract()\n",
     "\n",
-    "        for theme in set(data.themes):\n",
-    "            theme_li = add_tag('li', themes_ul, theme, {'class': 'theme'})\n",
+    "    return s\n",
     "\n",
-    "    description = add_tag('p', section, data.description[0], attrs={'class':'description__text'})\n",
-    "    soup.article.append(section)\n",
-    "\n",
-    "hr = soup.new_tag('hr')\n",
-    "soup.article.append(hr)\n",
+    "df['soup'] = df.apply(lambda x: add_info(template, x), axis=1)\n",
+    "df['html'] = df['soup'].apply(lambda x: str(x))\n",
+    "total = '<hr/>'.join(df['html'])\n",
     "\n",
     "path_to_html_template = \"../mgio/11ty/_includes/events.njk\"\n",
     "with open(path_to_html_template, 'w', encoding='utf-8') as html_template:\n",
-    "    html_template.write(str(soup.article))"
+    "    html_template.write(f'<hr/>{total}<hr/>')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "Collapsed": "false"
    },
@@ -267,12 +296,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../../matyushkin.github.io/index.html from ./index.html.\n",
       "Writing ../../matyushkin.github.io/404/index.html from ./404.html.\n",
+      "Writing ../../matyushkin.github.io/index.html from ./index.html.\n",
       "Writing ../../matyushkin.github.io/README/index.html from ./README.md.\n",
-      "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
       "Writing ../../matyushkin.github.io/cv/index.html from ./cv/index.html.\n",
       "Writing ../../matyushkin.github.io/events/index.html from ./events/index.html.\n",
+      "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
       "Writing ../../matyushkin.github.io/links/index.html from ./links/index.html.\n",
       "Writing ../../matyushkin.github.io/posts/index.html from ./posts/index.html.\n",
       "Writing ../../matyushkin.github.io/spb/index.html from ./spb/index.html.\n",
@@ -286,7 +315,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +340,7 @@
    },
    "outputs": [],
    "source": [
-    "#! cd ../matyushkin.github.io/; git add . ; git commit -m \"Events page is updated: only actual events\"; git push origin master"
+    "# ! cd ../matyushkin.github.io/; git add . ; git commit -m \"Events page is updated: only actual events. More information now\"; git push origin master"
    ]
   },
   {
@@ -331,21 +360,12 @@
    },
    "outputs": [],
    "source": [
-    "import importlib\n",
+    "import sys, importlib\n",
     "modulenames = set(sys.modules) & set(globals())\n",
     "allmodules = [sys.modules[name] for name in modulenames]\n",
     "for module in allmodules:\n",
     "    importlib.reload(module)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
