--- a/parser.ipynb
+++ b/parser.ipynb
@@ -132,32 +132,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "# Анализируем и дополняем полученную информацию\n",
+    "\n",
+    "Предварительно, если среди мероприятий имеются мероприятия, не обрабатываемые парсером (`events_special`) или рекламируемые (`events_promo`), обрабатываем их отдельно. Для этого помечаем их в датафрейме особым образом."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "#! Отсюда можно забрать обработчикитегов\n",
+    "import pandas as pd\n",
     "\n",
-    "# all_fields = set(fields.keys())\n",
-    "# required   = {key for key in fields if fields[key]['required']}\n",
-    "# optional   = {key for key in fields if not fields[key]['required']}\n",
+    "def promo_and_special():\n",
+    "    event_types = 'promo', 'special'\n",
+    "    d = {}\n",
+    "    for event_type in event_types:\n",
+    "        event_urls = list(eval(f'files.events_{event_type}.keys()'))\n",
+    "        for event_url in event_urls:\n",
+    "            d[event_url] = event_type\n",
+    "    return d\n",
     "\n",
-    "#     def tags(self):\n",
-    "#         tags = {}\n",
-    "#         title = self.data['title']\n",
-    "#         event_url = self.data['event_url']\n",
-    "#         themes = self.data['themes'].copy()\n",
-    "#         themes.append(title)\n",
-    "#         themes.append(event_url)\n",
-    "#         text = ''.join(themes)\n",
-    "#         for key in tags:\n",
-    "#             for tag in tags[key]:\n",
-    "#                 if tag.lower() in text.lower():\n",
-    "#                     self.data[tags].add(tag)\n",
-    "#         return tags"
+    "def tags(data):\n",
+    "    tags = set()\n",
+    "    title = data.title\n",
+    "    event_url = data.event_url\n",
+    "    description = data.description\n",
+    "    themes = data.themes.copy()\n",
+    "    themes += [title, event_url]\n",
+    "    themes += description\n",
+    "    text = ' '.join(themes)\n",
+    "    \n",
+    "    for key in files.tags:\n",
+    "        for tag in files.tags[key]:\n",
+    "            if tag.lower() in text.lower():\n",
+    "                tags.add(key)\n",
+    "    return tags\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame.from_dict(files.events, orient='index')\n",
+    "\n",
+    "# Сразу выкидываем мероприятия, которые не хотим видеть\n",
+    "df = df.drop(list(files.events_bad.keys()), errors='ignore')\n",
+    "\n",
+    "df = df.sort_values(by=['date'])\n",
+    "df = df[df['date'] >= handlers.current_date.isoformat()]   #! добавить проверку на время\n",
+    "df['type'] = df.index.map(promo_and_special())\n",
+    "df['tags'] = df.apply(lambda x: tags(x), axis=1)"
    ]
   },
   {
@@ -175,40 +204,12 @@
     "Collapsed": "false"
    },
    "source": [
-    "Для сборки страницы используем pandas и BeautifulSoup. Страницу собираем, объединяя soup-объекты в один. Предварительно, если среди мероприятий имеются мероприятия, не обрабатываемые парсером (`events_special`) или рекламируемые (`events_promo`), обрабатываем их отдельно. Для этого помечаем их в датафрейме особым образом."
+    "Для сборки страницы используем BeautifulSoup. Страницу собираем, объединяя soup-объекты в один."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def promo_and_special():\n",
-    "    event_types = 'promo', 'special'\n",
-    "    d = {}\n",
-    "    for event_type in event_types:\n",
-    "        event_urls = list(eval(f'files.events_{event_type}.keys()'))\n",
-    "        for event_url in event_urls:\n",
-    "            d[event_url] = event_type\n",
-    "    return d\n",
-    "\n",
-    "df = pd.DataFrame.from_dict(files.events, orient='index')\n",
-    "df = df.sort_values(by=['date'])\n",
-    "df = df[df['date'] >= handlers.current_date.isoformat()]   #! добавить проверку на время\n",
-    "df['type'] = df.index.map(promo_and_special())\n",
-    "\n",
-    "# Убираем те мероприятия, которых не хотим видеть\n",
-    "df = df.drop(list(files.events_bad.keys()), errors='ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {
     "Collapsed": "false"
    },
@@ -232,9 +233,10 @@
     "    data_block['data-companies'] = companies\n",
     "    data_block['data-price'] = data.price\n",
     "    data_block['data-online_status'] = data.online_status\n",
+    "    if data.tags:\n",
+    "        data_block['data-tags'] = \" \".join(data.tags)\n",
     "    if data.type == 'promo':\n",
     "        data_block['class'].append('promo')\n",
-    "    \n",
     "    \n",
     "    # Обработка заголовка\n",
     "    header = s.find(\"h2\")\n",
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {
     "Collapsed": "false"
    },
@@ -297,16 +299,16 @@
      "output_type": "stream",
      "text": [
       "Writing ../../matyushkin.github.io/404/index.html from ./404.html.\n",
-      "Writing ../../matyushkin.github.io/index.html from ./index.html.\n",
       "Writing ../../matyushkin.github.io/README/index.html from ./README.md.\n",
-      "Writing ../../matyushkin.github.io/cv/index.html from ./cv/index.html.\n",
+      "Writing ../../matyushkin.github.io/index.html from ./index.html.\n",
       "Writing ../../matyushkin.github.io/events/index.html from ./events/index.html.\n",
       "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
       "Writing ../../matyushkin.github.io/links/index.html from ./links/index.html.\n",
       "Writing ../../matyushkin.github.io/posts/index.html from ./posts/index.html.\n",
+      "Writing ../../matyushkin.github.io/cv/index.html from ./cv/index.html.\n",
       "Writing ../../matyushkin.github.io/spb/index.html from ./spb/index.html.\n",
       "Writing ../../matyushkin.github.io/texts/index.html from ./texts/index.html.\n",
-      "Copied 15 files / Wrote 10 files in 0.18 seconds (18.0ms each, v0.11.0)\n"
+      "Copied 15 files / Wrote 10 files in 0.19 seconds (19.0ms each, v0.11.0)\n"
      ]
     },
     {
@@ -315,7 +317,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,13 +336,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master f15c067] Events page is updated: data-tags are added\n",
+      " 1 file changed, 10 insertions(+), 10 deletions(-)\n",
+      " rewrite events/index.html (74%)\n",
+      "Counting objects: 4, done.\n",
+      "Delta compression using up to 8 threads.\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (4/4), 454 bytes | 454.00 KiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "To github.com:matyushkin/matyushkin.github.io.git\n",
+      "   7b378d3..f15c067  master -> master\n"
+     ]
+    }
+   ],
    "source": [
-    "# ! cd ../matyushkin.github.io/; git add . ; git commit -m \"Events page is updated: only actual events. More information now\"; git push origin master"
+    "!cd ../matyushkin.github.io/; git add . ; git commit -m \"Events page is updated: data-tags are added\"; git push origin master"
    ]
   },
   {
@@ -354,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "Collapsed": "false"
    },
