Selenium foot loader function is added

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -15,12 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 113,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "\n",
     "# custom packages\n",
@@ -97,6 +98,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "# def get_content_test(start_url, event_url):\n",
+    "#     start_page = StartPage(start_url)\n",
+    "#     print(start_page.events)\n",
+    "#     actual = start_page.actual_events\n",
+    "#     event = EventPage(event_url, start_page)\n",
+    "#     print(event.data)\n",
+    "\n",
+    "# get_content_test(\"https://events.yandex.ru/\", \"https://cloud.yandex.ru/events/143\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
@@ -107,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 114,
    "metadata": {
     "Collapsed": "false"
    },
@@ -121,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 115,
    "metadata": {
     "Collapsed": "false"
    },
@@ -144,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "metadata": {
     "Collapsed": "false"
    },
@@ -209,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 117,
    "metadata": {
     "Collapsed": "false"
    },
@@ -262,10 +281,15 @@
     "                line = s.new_tag('li')\n",
     "                line.string = theme\n",
     "                s.ul.append(line)\n",
-    "        if data.speakers!=['']:\n",
+    "    if data.speakers != ['']:\n",
+    "        if len(data.speakers) == 1:\n",
+    "            themes_and_speakers.append(f'Докладывает: {data.speakers[0]}.')\n",
+    "        else:\n",
     "            speakers_str = ', '.join(data.speakers)\n",
     "            themes_and_speakers.append(f'Докладывают: {speakers_str}.')\n",
-    "    else:\n",
+    "    if data.themes == [''] and data.speakers != ['']:\n",
+    "        s.ul.extract()\n",
+    "    if data.themes == [''] and data.speakers == ['']:\n",
     "        s.find(\"p\", {\"class\":\"themes_and_speakers\"}).extract()\n",
     "    \n",
     "    # Блок с описанием мероприятия\n",
@@ -289,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 118,
    "metadata": {
     "Collapsed": "false"
    },
@@ -301,14 +325,14 @@
       "Writing ../../matyushkin.github.io/404/index.html from ./404.html.\n",
       "Writing ../../matyushkin.github.io/README/index.html from ./README.md.\n",
       "Writing ../../matyushkin.github.io/index.html from ./index.html.\n",
-      "Writing ../../matyushkin.github.io/events/index.html from ./events/index.html.\n",
       "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
+      "Writing ../../matyushkin.github.io/cv/index.html from ./cv/index.html.\n",
+      "Writing ../../matyushkin.github.io/events/index.html from ./events/index.html.\n",
       "Writing ../../matyushkin.github.io/links/index.html from ./links/index.html.\n",
       "Writing ../../matyushkin.github.io/posts/index.html from ./posts/index.html.\n",
-      "Writing ../../matyushkin.github.io/cv/index.html from ./cv/index.html.\n",
       "Writing ../../matyushkin.github.io/spb/index.html from ./spb/index.html.\n",
       "Writing ../../matyushkin.github.io/texts/index.html from ./texts/index.html.\n",
-      "Copied 15 files / Wrote 10 files in 0.19 seconds (19.0ms each, v0.11.0)\n"
+      "Copied 15 files / Wrote 10 files in 0.17 seconds (17.0ms each, v0.11.0)\n"
      ]
     },
     {
@@ -317,7 +341,7 @@
        "True"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 119,
    "metadata": {
     "Collapsed": "false"
    },
@@ -345,22 +369,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master f15c067] Events page is updated: data-tags are added\n",
+      "[master 6a5fcce] Events page is updated: some speakers are added\n",
       " 1 file changed, 10 insertions(+), 10 deletions(-)\n",
-      " rewrite events/index.html (74%)\n",
+      " rewrite events/index.html (83%)\n",
       "Counting objects: 4, done.\n",
       "Delta compression using up to 8 threads.\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (4/4), 454 bytes | 454.00 KiB/s, done.\n",
+      "Writing objects: 100% (4/4), 426 bytes | 426.00 KiB/s, done.\n",
       "Total 4 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To github.com:matyushkin/matyushkin.github.io.git\n",
-      "   7b378d3..f15c067  master -> master\n"
+      "   04fb0f8..6a5fcce  master -> master\n"
      ]
     }
    ],
    "source": [
-    "!cd ../matyushkin.github.io/; git add . ; git commit -m \"Events page is updated: data-tags are added\"; git push origin master"
+    "!cd ../matyushkin.github.io/; git add . ; git commit -m \"Events page is updated: some speakers are added\"; git push origin master"
    ]
   },
   {
@@ -374,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 112,
    "metadata": {
     "Collapsed": "false"
    },
@@ -386,6 +410,22 @@
     "for module in allmodules:\n",
     "    importlib.reload(module)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "# Click buttons in footer with Selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
